<resources>
    <string name="app_name">Local Hero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_text">Login</string>
    <string name="add_payment_card">Add Payment Card</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="nickname">Nickname</string>
    <string name="card_expiry">Expiry (MM/YY)</string>
    <string name="expiry">Expiry</string>
    <string name="poseidon_god_mode_title">POSEIDON GOD MODE</string>
    <string name="add_payment_card_text">Add payment card</string>
    <string name="settings_text">Settings</string>
    <string name="cancel_text">Cancel</string>
    <string name="error_title">Error</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="login_invalid_token">It appears that your token is invalid</string>
    <string name="wallet_title">Wallet</string>
    <string name="unexpected_error">An unexpected error has happened</string>
    <string name="expiry">Expiry</string>
    <string name="poseidon_god_mode_title">POSEIDON GOD MODE</string>
    <string name="add_payment_card_text">Add payment card</string>
    <string name="settings_text">Settings</string>
    <string name="cancel_text">Cancel</string>
    <string name="okay">Okay</string>
    <string name="location_permission_message">The Local Hero app needs your location for this functionality</string>
    <string name="location_permission_title">Location Permission Needed</string>
</resources>